style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=WDXL+Lubrifont+TC&display=swap');
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;900&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
@import url("https://fonts.googleapis.com/css2?family=Tektur:wght@400;500;600;700;900&display=swap");

:root {
  --color-text-primary: #121212;
  --color-background: #f5f5f5;
  --color-nav-background: rgba(245, 245, 245, 0.9);
  --color-text-secondary: #A0A0A0;
  --color-accent-light: #a6d4ff;
  --color-accent: #1e90ff;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

a {
  color: var(--fg-color);
}

body {
  background-color: var(--color-background);
  font-family: "Space Grotesk";
  font-size: 1.2rem;
  color: var(--color-text-primary);
}

.nav-wrapper {
  display: flex;
  justify-content: flex-end;
  padding: 1rem 2rem;
  position: sticky;
  top: 0;
  background-color: var(--color-nav-background);
  z-index: 999;
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
}

.logo {
  margin-right: auto;
  text-decoration: none;
  font-weight: 900;
  font-size: 1.4rem;
  color: var(--color-accent);
}

nav {
  display: flex;
  align-items: center;
}

.nav-list {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  list-style: none;
}

.nav-list a {
  text-decoration: none;
  position: relative;
  text-transform: lowercase;
  color: var(--color-text-secondary);
  transition: color .2s ease;
}

.nav-list a:hover {
  color: var(--color-text-primary);
}

.nav-list li:last-child a {
  padding: 0.5rem 1rem;
  background-color: var(--color-accent-light);
  color: var(--color-text-secondary);
  border-radius: 0.1rem;
  transition: all .2s ease;
}

.nav-list li:last-child a:hover {
  color: var(--color-text-primary);
  padding: 0.5rem 1.5rem;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 90vh;
  gap: 2rem;
  padding: 5rem;
}

main h1 {
  font-size: 3rem;
  font-weight: 700;
  position: relative;
  font-family: "Orbitron";
}

main h1::after {
  content: "Web developer | UI/UX designer";
  display: block;
  position: absolute;
  top: 100%;
  color: var(--color-accent);
  font-size: 0.7rem;
  text-transform: uppercase;
}

main p.intro {
  width: 40%;
}

.socials {
  display: flex;
}

.socials .social-list {
  display: flex;
  list-style: none;
  gap: 1rem;
  font-size: 1.5rem;
}

.socials .social-list li a {
  color: var(--fg-color);
  transition: 0.2s ease-in-out;
}

.socials .social-list li a:hover {
  color: var(--color-accent);
}

.contact {
  text-decoration: none;
  color: var(--color-text-primary);
  font-weight: 700;
  background-color: transparent;
  padding: 0.5rem 2rem;
  border: 2px var(--color-text-primary) solid;
  align-self: flex-start;
  transition: all 0.2s ease;
  transform: skew(-10deg);
}

.contact:hover {
  background-color: var(--color-accent);
  box-shadow: 10px 10px var(--color-text-secondary);
}

.highlight {
  min-height: 40vh;
  padding: 5rem;
  background-color: var(--color-text-primary);
  color: var(--color-background);
  display: flex;
  justify-content: center;
  position: relative;
}

.project_container {
  display: grid;
  /* grid-template-columns: auto auto auto; */
  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
  gap: 1rem;
  height: 100%;
  width: 100%;
}

.project {
  position: relative;
}

.project img {
  width: 100%;
  height: 100%;
  /* object-fit: cover; */
}

.hover-text {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.project:hover .hover-text {
  opacity: 1;
}

.project:hover .hover-text span {
  display: flex;
  gap: 1rem;
}

.cta {
  border: none;
  padding: 0.5rem 1rem;
  background-color: var(--color-accent-light);
  color: var(--color-text-secondary);
  cursor: pointer;
  border-radius: 0.2rem;
  transition: all .2s ease;
}

.cta:hover {
  padding: 0.5rem 1.2rem;
  color: var(--color-text-primary);
}

